fix: responsive view and favicon

--- a/src/styles/profilecard.css
+++ b/src/styles/profilecard.css
@@ -50,3 +50,20 @@
 .card-link {
     text-decoration: none;
 }
+
+@media (max-width: 768px) {
+    .card-container {
+      flex-direction: column;
+        height: initial;
+        width: 100%;
+        margin: 0.75rem 0;
+    }
+  
+    .card-heading {
+      font-size: 20px; /* Slightly larger font size for headings on mobile */
+    }
+  
+    .typography-3 {
+      font-size: 16px; /* Slightly larger font size for text on mobile */
+    }
+  }
