--- a/src/styles/characterdetail.css
+++ b/src/styles/characterdetail.css
@@ -2,7 +2,7 @@
 
 .character-detail-container {
     max-width: 800px;
-    margin: 40px auto;
+    margin: 23px auto;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 15px;
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     justify-content: space-evenly;
   }
   
@@ -35,17 +35,17 @@
   }
   
   .character-image {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border: 5px solid #ddd;
+    width: 150px;
+    height: 150px;
+    border-radius: 25%;
+    border: 2px solid #ddd;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   }
   
   .character-details {
     background-color: #fff;
     border-radius: 10px;
-    padding: 20px;
+    padding: 20px 12px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
   }
@@ -54,7 +54,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
     font-size: 1.2rem;
   }
   
@@ -80,15 +80,20 @@
   .character-info-list {
     list-style-type: none;
     padding: 0;
-    font-size: 1.1rem;
     color: #555;
-    line-height: 1.8;
+    margin: 0;
   }
   
   .character-info-list li {
     display: flex;
     align-items: center;
-    margin-bottom: 15px;
+    margin-bottom: 8px;
+  }
+
+  .character-info-list li:last-child {
+    display: flex;
+    align-items: center;
+    margin: 0;
   }
   
   .character-info-list strong {
@@ -118,8 +123,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 89vh;
     font-size: 1.5rem;
     color: #777;
   }
   
+  @media (max-width: 768px) {
+    .character-header {
+      flex-direction: column; /* Change flex direction to column on smaller screens */
+      align-items: center; /* Center align content */
+    }
+  }
